--- a/readme.html
+++ b/readme.html
@@ -1,12 +1,5 @@
 
 <h1>Executable</h1>
-<ul><li>
-<p><a
-href="http://rubyworks.github.com/executable">rubyworks.github.com/executable</a></p>
-</li><li>
-<p><a
-href="http://github.com/rubyworks/executable">github.com/rubyworks/executable</a></p>
-</li></ul>
 
 <h2>DESCRIPTION</h2>
 
@@ -22,6 +15,15 @@ with the subsequent arguments passed to the method.</p>
 <p>Public writters become CLI options.</p>
 </li><li>
 <p>Public methods become subcommands.</p>
+</li></ul>
+
+<h2>RESORUCES</h2>
+<ul><li>
+<p><a
+href="http://rubyworks.github.com/executable">rubyworks.github.com/executable</a></p>
+</li><li>
+<p><a
+href="http://github.com/rubyworks/executable">github.com/rubyworks/executable</a></p>
 </li></ul>
 
 <h2>RELEASE NOTES</h2>
@@ -53,6 +55,12 @@ x.execute_command(&quot;butter yum&quot;)
 
 x.execute_command(&quot;bread --quiet&quot;)
 =&gt; [&quot;BREAD&quot;, true]</pre>
+
+<p>The only (minor) limitation of Executable, as opposed to other light-weight
+command-line parsers is the need to use an <tt>=</tt> sign when specifying
+options that take an argument, e.g.</p>
+
+<pre>x.execute_command(&quot;foo --name=example&quot;)</pre>
 
 <p>See RDocs for more information.</p>
 
