--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <a href="">Home</a> &nbsp;
     <a href="docs/api/index.html">API</a> &nbsp;
     <a href="docs/qed/index.html">QED</a> &nbsp;
+    <a href="https://rubygems.org/gems/executable">Gem</a> &nbsp;
     <a href="http://github.com/rubyworks/executable">Code</a> &nbsp;
   </div>
 
