admin: yea, more better on the website

--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,9 @@
     });
   </script>
   <style>
-    body { font-family: monospace; }
+    body { font-family: monospace; margin: 0; padding: 0;}
+    #nav { text-align: center; background: #000; padding: 5px; }
+    #nav a { font-size: 0.9em; color: #fff; }
     #main { margin: 0 auto; width: 800px; }
     li p { margin: 2px; }
     h1 { font-size: 3em; }
@@ -19,6 +21,14 @@
   </style>
 </head>
 <body>
+  <div id="nav">
+    <a href="">Home</a> &nbsp;
+    <a href="docs/api/index.html">API</a> &nbsp;
+    <a href="docs/qed/index.html">QED</a> &nbsp;
+    <a href="https://rubygems.org/gems/executable">Gem</a> &nbsp;
+    <a href="http://github.com/rubyworks/executable">Code</a> &nbsp;
+  </div>
+
 <div id="main">
   <div id="readme">
   </div>
