admin: damn it I forgot the pre

--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,7 @@
     li p { margin: 2px; }
     h1 { font-size: 3em; }
     h2 { margin-top: 30px; }
+    pre { padding: 20px; background: #ded; font-size: 0.9em; font-family: courier; }
   </style>
 </head>
 <body>
