--- a/readme.html
+++ b/readme.html
@@ -12,12 +12,12 @@ with the subsequent arguments passed to the method.</p>
 <ul><li>
 <p>Super easy to use, just mixin.</p>
 </li><li>
-<p>Public writters become CLI options.</p>
+<p>Public writers become options.</p>
 </li><li>
 <p>Public methods become subcommands.</p>
 </li></ul>
 
-<h2>RESORUCES</h2>
+<h2>RESOURCES</h2>
 <ul><li>
 <p><a
 href="http://rubyworks.github.com/executable">rubyworks.github.com/executable</a></p>
@@ -61,7 +61,7 @@ x.execute_command(&quot;bread --quiet --size=big&quot;)
 <p>Notice that Executable requires an equal-sign (<tt>=</tt>) be used when
 specifying values for non-boolean attributes.</p>
 
-<p>To make the command available on the comamnd line, add an executable to
+<p>To make the command available on the command line, add an executable to
 your project passing ARGV to the #execute_command method.</p>
 
 <pre>#!usr/bin/env ruby
