--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
   </script>
   <style>
     body { font-family: monospace; margin: 0; padding: 0;}
-    #nav { text-align: center; background: #000; padding: 5px; }
+    #nav { text-align: center; background: #000; padding: 10px; color: #ccc; }
     #nav a { font-size: 0.9em; color: #fff; }
-    #main { margin: 0 auto; width: 800px; }
+    #main { margin: 0 auto; max-width: 960px;}
     li p { margin: 2px; }
-    h1 { font-size: 3em; }
+    h1 { font-size: 3em; background: url(bg.jpg) center; height: 200px; padding: 20px; }
     h2 { margin-top: 30px; }
     pre { padding: 20px; background: #ded; font-size: 0.9em; font-family: courier; }
+    a { text-decoration: none; }
+    a:hover { text-decoration: underline; }
   </style>
 </head>
 <body>
   <div id="nav">
+    Executable &nbsp; &middot; &nbsp;
     <a href="">Home</a> &nbsp;
     <a href="docs/api/index.html">API</a> &nbsp;
     <a href="docs/qed/index.html">QED</a> &nbsp;
@@ -34,6 +37,21 @@
   <div id="readme">
   </div>
 </div>
+
+<div style="margin-top: 40px; padding: 40px; text-align: center; border: 1px solid #ccc;">
+  <script type="text/javascript"><!--
+  google_ad_client = "ca-pub-1126154564663472";
+  /* RUBYWORKS 09-10-02 728x90 */
+  google_ad_slot = "0788888658";
+  google_ad_width = 728;
+  google_ad_height = 90;
+  //-->
+  </script>
+  <script type="text/javascript"
+  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+  </script>
+</div>
+
 </body>
 </html>
 
