--- a/site/index.html
+++ b/site/index.html
@@ -11,19 +11,24 @@
     });
   </script>
   <style>
-    body { font-family: monospace; margin: 0; padding: 0;}
-    #nav { text-align: center; background: #000; padding: 10px; color: #ccc; }
-    #nav a { font-size: 0.9em; color: #fff; }
-    #main { margin: 0 auto; max-width: 960px;}
+    body { font-family: monospace; margin: 0; padding: 0; background: url(bg.jpg) 600px 0;}
     li p { margin: 2px; }
-    h1 { font-size: 3em; background: url(bg.jpg) center; height: 200px; padding: 20px; }
+    h1 { font-size: 4em; height: 90px; padding: 0; }
     h2 { margin-top: 30px; }
-    pre { padding: 20px; background: #ded; font-size: 0.9em; font-family: courier; }
+    pre { padding: 20px; background: #ded; font-size: 0.9em; font-family: courier; font-weight: bold; }
     a { text-decoration: none; }
     a:hover { text-decoration: underline; }
+
+    #nav { text-align: center; background: #222; padding: 10px; color: #ccc; }
+    #nav a { font-size: 0.9em; color: #fff; }
+    #main { margin: 0 auto; max-width: 800px; }
+    #readme { opacity: 0.9; background: #fff; padding: 0.5em 2em 3em 2em; }
+    #footer { margin-top: 0; padding: 40px; text-align: center; background: #222; border-top: 1px solid #999; }
   </style>
 </head>
 <body>
+
+<div id="main">
   <div id="nav">
     Executable &nbsp; &middot; &nbsp;
     <a href="">Home</a> &nbsp;
@@ -33,24 +38,24 @@
     <a href="http://github.com/rubyworks/executable">Code</a> &nbsp;
   </div>
 
-<div id="main">
   <div id="readme">
+  </div>
+
+  <div id="footer">
+    <script type="text/javascript"><!--
+    google_ad_client = "ca-pub-1126154564663472";
+    /* RUBYWORKS 09-10-02 728x90 */
+    google_ad_slot = "0788888658";
+    google_ad_width = 728;
+    google_ad_height = 90;
+    //-->
+    </script>
+    <script type="text/javascript"
+    src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+    </script>
   </div>
 </div>
 
-<div style="margin-top: 40px; padding: 40px; text-align: center; border: 1px solid #ccc;">
-  <script type="text/javascript"><!--
-  google_ad_client = "ca-pub-1126154564663472";
-  /* RUBYWORKS 09-10-02 728x90 */
-  google_ad_slot = "0788888658";
-  google_ad_width = 728;
-  google_ad_height = 90;
-  //-->
-  </script>
-  <script type="text/javascript"
-  src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
-  </script>
-</div>
 
 </body>
 </html>
