admin: some final improvements on website

--- a/site/index.html
+++ b/site/index.html
@@ -11,7 +11,7 @@
     });
   </script>
   <style>
-    body { font-family: monospace; margin: 0; padding: 0; background: url(bg.jpg) 600px 0;}
+    body { font-family: monospace; margin: 0; padding: 0; background: url(bg.jpg) top center repeat-y #626262;}
     li p { margin: 2px; }
     h1 { font-size: 4em; height: 90px; padding: 0; }
     h2 { margin-top: 30px; }
