--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
     #nav { text-align: center; background: #222; padding: 10px; color: #ccc; }
     #nav a { font-size: 0.9em; color: #fff; }
-    #main { margin: 0 auto; max-width: 760px; }
+    #main { margin: 0 auto; max-width: 780px; }
     #readme { opacity: 0.9; background: #fff; padding: 0.5em 2em 3em 2em; }
-    #footer { margin-top: 0; padding: 40px; text-align: center; background: #222; border-top: 1px solid #999; }
+    #footer { margin-top: 0; padding: 40px 0; text-align: center; background: #222; border-top: 1px solid #999; }
   </style>
 </head>
 <body>
