--- a/readme.html
+++ b/readme.html
@@ -11,118 +11,128 @@ src="http://travis-ci.org/rubyworks/executable.png" /></a></p>
 
 <h2 id="label-DESCRIPTION">DESCRIPTION</h2>
 
-<p>Think of Executable as a <strong>COM</strong>, a Commandline Object Mapper,
-in much the same way that ActiveRecord is an ORM, an Object Relational
-Mapper. A class utilizing Executable can define a complete command line
-tool using nothing more than Ruby’s own method definitions.</p>
-
-<p>Executable is a very striaght-forward CLI framework for Ruby. CLI::Base is
-a <strong>COM</strong> –a Command-to-Object Mapping library. A command line
-tool can be defined using nothing more than Ruby’s own standard syntax. No
-special DSL is required.</p>
+<p>Think of Executable as a <strong>COM</strong>, a Command-line Object
+Mapper, in much the same way that ActiveRecord is an ORM, an Object
+Relational Mapper. A class utilizing Executable can define a complete
+command line tool using nothing more than Ruby’s own own standard syntax.
+No special DSL is required.</p>
 
 <h2 id="label-FEATURES">FEATURES</h2>
 <ul><li>
-<p>Super easy to use, just mixin.</p>
+<p>Easy to use, just mixin or subclass.</p>
+</li><li>
+<p>Define #call to control the command procedure.</p>
 </li><li>
 <p>Public writers become options.</p>
 </li><li>
-<p>Public methods become subcommands.</p>
+<p>Namespace children become subcommands.</p>
+</li><li>
+<p>Or easily dispatch subcommands to public methods.</p>
+</li><li>
+<p>Generate help in plain text or markdown.</p>
+</li></ul>
+
+<h2 id="label-LIMITATIONS">LIMITATIONS</h2>
+<ul><li>
+<p>Ruby 1.9+ only.</p>
+</li><li>
+<p>Help doesn’t handle aliases well (yet).</p>
 </li></ul>
 
 <h2 id="label-RELEASE+NOTES">RELEASE NOTES</h2>
 
-<p>Please see HISTORY file.</p>
+<p>Please see HISTORY.rdoc file.</p>
 
 <h2 id="label-SYNOPSIS">SYNOPSIS</h2>
 
 <p>Executable can be use as a mixin, or as a subclass via `Executable::Base`.
 Add methods to you class to handle command-line options. Writer methods 
-(those ending in ‘=’) coorepsond to an options and a query method (those
+(those ending in ‘=’) correspond to an options and a query method (those
 ending in ‘?’) mark an attribute as a flag option.</p>
 
-<p>For example, here is a simple commandline tool to run a Ruby script.</p>
+<p>For example, here is a simple “Hello, World!” commandline tool.</p>
 
 <pre class="ruby"><span class="ruby-identifier">require</span> <span class="ruby-string">'executable'</span>
 
-<span class="ruby-keyword">class</span> <span class="ruby-constant">RunCLI</span> <span class="ruby-operator">&lt;</span> <span class="ruby-constant">Executable</span><span class="ruby-operator">::</span><span class="ruby-constant">Base</span>
-  <span class="ruby-comment"># Require LIBRARY before executing your script.</span>
-  <span class="ruby-keyword">def</span> <span class="ruby-identifier">require=</span>(<span class="ruby-identifier">lib</span>)
-    <span class="ruby-identifier">require</span> <span class="ruby-identifier">lib</span>
+<span class="ruby-keyword">class</span> <span class="ruby-constant">HelloCommand</span> <span class="ruby-operator">&lt;</span> <span class="ruby-constant">Executable</span><span class="ruby-operator">::</span><span class="ruby-constant">Command</span>
+  <span class="ruby-comment"># Say it in uppercase?</span>
+  <span class="ruby-keyword">def</span> <span class="ruby-identifier">load=</span>(<span class="ruby-identifier">bool</span>)
+    <span class="ruby-ivar">@loud</span> = <span class="ruby-identifier">bool</span>
   <span class="ruby-keyword">end</span>
-  <span class="ruby-keyword">alias</span> :<span class="ruby-identifier">r=</span> <span class="ruby-operator">:</span><span class="ruby-identifier">require</span>=
 
-  <span class="ruby-comment"># Include PATH in $LOAD_PATH.</span>
-  <span class="ruby-keyword">def</span> <span class="ruby-identifier">include=</span>(<span class="ruby-identifier">path</span>)
-    <span class="ruby-identifier">$:</span>.<span class="ruby-identifier">unshift</span> <span class="ruby-identifier">path</span>
-  <span class="ruby-keyword">end</span>
-  <span class="ruby-keyword">alias</span> :<span class="ruby-constant">I=</span> <span class="ruby-operator">:</span><span class="ruby-identifier">incude</span>
-
-  <span class="ruby-comment"># Run in DEBUG mode.</span>
-  <span class="ruby-keyword">def</span> <span class="ruby-identifier">debug?</span>
-    <span class="ruby-identifier">$DEBUG</span> = <span class="ruby-keyword">true</span>
+  <span class="ruby-comment">#</span>
+  <span class="ruby-keyword">def</span> <span class="ruby-identifier">loud?</span>
+    <span class="ruby-ivar">@loud</span>
   <span class="ruby-keyword">end</span>
 
   <span class="ruby-comment"># Show this message.</span>
   <span class="ruby-keyword">def</span> <span class="ruby-identifier">help?</span>
-    <span class="ruby-identifier">puts</span> <span class="ruby-keyword">self</span>
+    <span class="ruby-identifier">cli</span>.<span class="ruby-identifier">show_help</span>
     <span class="ruby-identifier">exit</span>
   <span class="ruby-keyword">end</span>
   <span class="ruby-keyword">alias</span> :<span class="ruby-identifier">h?</span> <span class="ruby-operator">:</span><span class="ruby-identifier">help?</span>
 
-  <span class="ruby-comment"># Run the command.</span>
-  <span class="ruby-keyword">def</span> <span class="ruby-identifier">main</span>(<span class="ruby-identifier">script</span>)
-    <span class="ruby-identifier">load</span>(<span class="ruby-identifier">script</span>)
+  <span class="ruby-comment"># Say hello.</span>
+  <span class="ruby-keyword">def</span> <span class="ruby-identifier">call</span>(<span class="ruby-identifier">name</span>)
+    <span class="ruby-identifier">name</span> = <span class="ruby-identifier">name</span> <span class="ruby-operator">||</span> <span class="ruby-string">'World'</span>
+    <span class="ruby-identifier">str</span>  = <span class="ruby-node">&quot;Hello, #{name}!&quot;</span>
+    <span class="ruby-identifier">str</span>  = <span class="ruby-identifier">str</span>.<span class="ruby-identifier">upcase</span> <span class="ruby-keyword">if</span> <span class="ruby-identifier">loud?</span>
+    <span class="ruby-identifier">puts</span> <span class="ruby-identifier">str</span>
   <span class="ruby-keyword">end</span>
 <span class="ruby-keyword">end</span>
-
-<span class="ruby-constant">Example</span>.<span class="ruby-identifier">execute!</span>(<span class="ruby-string">&quot;foo.rb&quot;</span>)
 </pre>
-
-<h2 id="label-SYNOPSIS">SYNOPSIS</h2>
-
-<p>Simply mixin Executable, then call #execute_command.</p>
-
-<pre class="ruby"><span class="ruby-keyword">class</span> <span class="ruby-constant">Example</span>
-  <span class="ruby-identifier">include</span> <span class="ruby-constant">Executable</span>
-
-  <span class="ruby-identifier">attr_accessor</span> :<span class="ruby-identifier">quiet</span>
-
-  <span class="ruby-identifier">attr_accessor</span> :<span class="ruby-identifier">size</span>
-
-  <span class="ruby-keyword">def</span> <span class="ruby-identifier">bread</span>(*<span class="ruby-identifier">args</span>)
-    [<span class="ruby-string">&quot;bread&quot;</span>, <span class="ruby-identifier">quiet</span>, <span class="ruby-identifier">size</span>, *<span class="ruby-identifier">args</span>]
-  <span class="ruby-keyword">end</span>
-
-  <span class="ruby-keyword">def</span> <span class="ruby-identifier">butter</span>(*<span class="ruby-identifier">args</span>)
-    [<span class="ruby-string">&quot;butter&quot;</span>, <span class="ruby-identifier">quiet</span>, <span class="ruby-identifier">size</span>, *<span class="ruby-identifier">args</span>]
-  <span class="ruby-keyword">end</span>
-<span class="ruby-keyword">end</span>
-
-<span class="ruby-identifier">example</span> = <span class="ruby-constant">Example</span>.<span class="ruby-identifier">new</span>
-
-<span class="ruby-identifier">example</span>.<span class="ruby-identifier">execute!</span>(<span class="ruby-string">&quot;butter yum&quot;</span>)
-=<span class="ruby-operator">&gt;</span> [<span class="ruby-string">&quot;butter&quot;</span>, <span class="ruby-keyword">nil</span>, <span class="ruby-keyword">nil</span>, <span class="ruby-string">&quot;yum&quot;</span>]
-
-<span class="ruby-identifier">example</span>.<span class="ruby-identifier">execute!</span>(<span class="ruby-string">&quot;bread --quiet --size=big&quot;</span>)
-=<span class="ruby-operator">&gt;</span> [<span class="ruby-string">&quot;bread&quot;</span>, <span class="ruby-keyword">true</span>, <span class="ruby-string">&quot;big&quot;</span>]
-</pre>
-
-<p>Notice that Executable requires an equal-sign (<code>=</code>) be used when
-specifying values for non-boolean attributes.</p>
 
 <p>To make the command available on the command line, add an executable to
-your project passing ARGV to the #execute! method.</p>
+your project passing ARGV to the #execute or #run methods.</p>
 
 <pre class="ruby"><span class="ruby-comment">#!usr/bin/env ruby</span>
-<span class="ruby-identifier">require</span> <span class="ruby-string">'example'</span>
-<span class="ruby-identifier">example</span> = <span class="ruby-constant">Example</span>.<span class="ruby-identifier">new</span>
-<span class="ruby-identifier">example</span>.<span class="ruby-identifier">execute!</span>(<span class="ruby-constant">ARGV</span>)
+<span class="ruby-identifier">require</span> <span class="ruby-string">'hello.rb'</span>
+<span class="ruby-constant">HelloCommand</span>.<span class="ruby-identifier">run</span>
 </pre>
 
-<p>For a more detail example see DEMO.rdoc.</p>
+<p>If we named this file `hello`, set its execute flag and made it available
+on our systems $PATH, then:</p>
 
-<h2 id="label-INSTALL">INSTALL</h2>
+<pre>$ hello
+Hello, World!
+
+$ hello John
+Hello, John!
+
+$ hello --loud John
+HELLO, JOHN!</pre>
+
+<p>Executable can also generate help text for commands.</p>
+
+<pre>$ hello --help
+USAGE: hello [options]
+
+Say hello.
+
+--loud      Say it in uppercase?
+--help      Show this message</pre>
+
+<p>If you look back at the class definition you can see it’s pulling comments
+from the source to provide descriptions. It pulls the  description the
+command itself from the `#call` method.</p>
+
+<p>Basic help like this is fine for personal tools, but for public facing
+production applications it is desirable to utilize manpages. To this end,
+Executable provides Markdown formatted help as well. We can access this,
+for example, via `HelloCommand.help.markdown`. The idea with this is that
+we can save the output to `man/hello.ronn` or copy it the top of our `bin/`
+file, edit it to perfection and then use tools such a <a
+href="https://github.com/rtomayko/ronn">ronn</a>, <a
+href="https://github.com/sunaku/binman">binman</a> or <a
+href="https://github.com/sunaku/md2man">md2man</a> to generate the
+manpages. What’s particularly cool about Executable, is that once we have a
+manpage in the standard `man/` location in our project, the `#show_help`
+method will use it instead of the plain text.</p>
+
+<p>For a more detail example see <a href="http://demo.html">QED</a> and <a
+href="http://rubydoc.info/gems/executable/frames">API</a> documentation.</p>
+
+<h2 id="label-INSTALLATION">INSTALLATION</h2>
 
 <p>Install with RubyGems in the usual fashion.</p>
 
