--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   </script>
   <style>
     body { font-family: monospace; margin: 0; padding: 0; background: url(assets/bg.jpg) top center repeat-y #626262;}
+    div { padding: 0; margin: 0; }
     li p { margin: 2px; }
-    h1 { font-size: 4em; height: 90px; padding: 0; margin: 0; }
-    h2 { margin-top: 25px; }
+    h1 { font-size: 4em; height: 90px; padding: 0; margin: 20px 0 0 0; }
+    h2 { margin-top: 30px; }
     pre { padding: 20px; background: #ded; font-size: 0.9em; font-family: courier; font-weight: bold; }
     a { text-decoration: none; }
     a:hover { text-decoration: underline; }
 
-    #nav { text-align: center; background: #222; padding: 0 10px 10px 10px; color: #ccc; }
-    #nav a { font-size: 0.9em; color: #fff; }
+    #nav { text-align: center; background: #222; padding: 10px; color: #ccc; }
+    #nav a { font-size: 0.9em; color: #fff; font-weight: bold; }
     #main { margin: 0 auto; max-width: 780px; }
     #readme { opacity: 0.9; background: #fff; padding: 0.5em 2em 3em 2em; }
     #footer { margin-top: 0; padding: 40px 0; text-align: center; background: #222; border-top: 1px solid #999; }
