--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     body { font-family: monospace; margin: 0; padding: 0; background: url(assets/bg.jpg) top center repeat-y #626262;}
     div { padding: 0; margin: 0; }
     li p { margin: 2px; }
-    h1 { font-size: 4em; height: 90px; padding: 0; margin: 20px 0 0 0; }
+    h1 { font-size: 4em; padding: 0; margin: 20px 0; }
     h2 { margin-top: 30px; }
     pre { padding: 20px; background: #ded; font-size: 0.9em; font-family: courier; font-weight: bold; }
     a { text-decoration: none; }
