--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     a { text-decoration: none; }
     a:hover { text-decoration: underline; }
 
-    #nav { text-align: center; background: #222; padding: 10px; color: #ccc; }
+    #nav { text-align: center; background: #222; padding: 10px; color: green; }
     #nav a { font-size: 0.9em; color: #fff; font-weight: bold; }
     #main { margin: 0 auto; max-width: 780px; }
     #readme { opacity: 0.9; background: #fff; padding: 0.5em 2em 3em 2em; }
