--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     li p { margin: 2px; }
     h1 { font-size: 4em; padding: 0; margin: 20px 0; }
     h2 { margin-top: 30px; }
-    pre { padding: 20px; background: #ded; font-size: 0.9em; font-family: courier; font-weight: bold; }
-    a { text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    pre { padding: 20px; background: #ded; font-size: 0.9em; color: #111; font-family: courier; font-weight: bold; }
+    a { text-decoration: none; color: #cfc; }
+    a:hover { text-decoration: underline; color: white; }
 
     #nav { text-align: center; background: #222; padding: 10px; color: #cfc; font-wright: bold; }
     #nav a { font-size: 0.9em; color: #fff; font-weight: bold; }
     #main { margin: 0 auto; max-width: 780px; }
-    #readme { opacity: 0.9; background: #fff; padding: 0.5em 2em 3em 2em; }
+    #readme { opacity: 0.9; background: #111; padding: 0.5em 2em 3em 2em; color: white; }
     #footer { margin-top: 0; padding: 40px 0; text-align: center; background: #222; border-top: 1px solid #999; }
   </style>
 </head>
