--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 </div>
 
 <div style="position: absolute; top: 0; right: 0;">
-  <a href="http://github.com/rubyworks/executable"><img src="assets/images/fork-me.png" alt="fork me" /></a>
+  <a href="http://github.com/rubyworks/executable"><img src="http://rubyworks.github.com/assets/images/fork-me.png" alt="fork me" /></a>
 </div>
 
 <div id="rubyworks" style="position: fixed; bottom: 0; left: 0; padding: 0; opacity: 0.2;">
