Fix type in example. (Marvin).

--- a/readme.html
+++ b/readme.html
@@ -59,7 +59,7 @@ methods (those ending in ‘?’) modify them to be boolean switches.</p>
   <span class="ruby-identifier">include</span> <span class="ruby-constant">Executable</span>
 
   <span class="ruby-comment"># Say it in uppercase?</span>
-  <span class="ruby-keyword">def</span> <span class="ruby-identifier">load=</span>(<span class="ruby-identifier">bool</span>)
+  <span class="ruby-keyword">def</span> <span class="ruby-identifier">loud=</span>(<span class="ruby-identifier">bool</span>)
     <span class="ruby-ivar">@loud</span> = <span class="ruby-identifier">bool</span>
   <span class="ruby-keyword">end</span>
 
