Remove ARGV mention from example.

--- a/readme.html
+++ b/readme.html
@@ -86,7 +86,7 @@ methods (those ending in ‘?’) modify them to be boolean switches.</p>
 </pre>
 
 <p>To make the command available on the command line, add an executable to
-your project passing ARGV to the #execute or #run methods.</p>
+your project calling the #execute or #run methods.</p>
 
 <pre class="ruby"><span class="ruby-comment">#!usr/bin/env ruby</span>
 <span class="ruby-identifier">require</span> <span class="ruby-string">'hello.rb'</span>
